@@ -230,6 +230,18 @@ t/Wikibase-Datatype-MediainfoStatement/06-rank.t
 t/Wikibase-Datatype-MediainfoStatement/07-snak.t
 t/Wikibase-Datatype-Property/01-use.t
 t/Wikibase-Datatype-Property/02-version.t
+t/Wikibase-Datatype-Property/03-new.t
+t/Wikibase-Datatype-Property/04-aliases.t
+t/Wikibase-Datatype-Property/05-datatype.t
+t/Wikibase-Datatype-Property/06-descriptions.t
+t/Wikibase-Datatype-Property/07-id.t
+t/Wikibase-Datatype-Property/08-labels.t
+t/Wikibase-Datatype-Property/09-lastrevid.t
+t/Wikibase-Datatype-Property/10-modified.t
+t/Wikibase-Datatype-Property/11-ns.t
+t/Wikibase-Datatype-Property/12-page_id.t
+t/Wikibase-Datatype-Property/13-statements.t
+t/Wikibase-Datatype-Property/14-title.t
 t/Wikibase-Datatype-Reference/01-use.t
 t/Wikibase-Datatype-Reference/02-version.t
 t/Wikibase-Datatype-Reference/03-new.t
