@@ -1,0 +1,13 @@
+use strict;
+use warnings;
+
+use Test::More 'tests' => 2;
+use Test::NoWarnings;
+use Wikibase::Datatype::Property;
+
+# Test.
+my $obj = Wikibase::Datatype::Property->new(
+	'datatype' => 'external-id',
+);
+my $ret = $obj->title;
+is($ret, undef, 'Without title.');
